Layout and style changes. Fix to slider value change on IE

--- a/BlinkyHeadedWebService/BlinkyHeadedWebService/Assets/Web/css/blinky.css
+++ b/BlinkyHeadedWebService/BlinkyHeadedWebService/Assets/Web/css/blinky.css
@@ -1,12 +1,3 @@
-	#sliderCol {
-		height: 1040px;
-		background-color:black;
-		color:red;
-	}
-	#onOffButton {
-		width: 100px;
-		height: 30px;
-	}
 	.spacer {
 		height:10px;
 	}
@@ -25,10 +16,13 @@
 	.blinkOff {
 		background: grey;
 	}
-	.blinkOn:after {
-		content: "STOP";
+	#onOffButton {
+		margin: 0 auto;
 	}
-	.blinkOff:after {
-		content: "START";
+	.blinkOnButton:after {
+		content: "Stop";
+	}
+	.blinkOffButton:after {
+		content: "Start";
 	}
 	
