--- a/BlinkyHeadedWebService/BlinkyHeadedWebService/Assets/Web/css/common.css
+++ b/BlinkyHeadedWebService/BlinkyHeadedWebService/Assets/Web/css/common.css
@@ -14,17 +14,20 @@ body {
 	padding: 20px;
 }
 .button {
+	background-color: #CCCCCC;
 	font-size:20;
-	display: flex;
   align-items: center;
   justify-content: center;
   border:none;
-	text-transform: lowercase;
-	margin: 0 auto;
+	margin: auto 0;
+	padding: 10px;
+	width:100px; 
+	text-align: center;
 }
 .button:hover {
-    background:linear-gradient(90deg, #32bdfe, #65daf4);
-    color:#E6E6E6;
+    background-color:#E6E6E6;
+    color:black;
+    cursor: pointer;
 }
 .container {
 	background-color: #FFFFFF;
@@ -53,7 +56,23 @@ body {
 	margin: 20px 10px 10px 20px;
 }
 
-.listpane .selected a{
+.listpane .selected {
+	width:100%;
+	font-weight: 500;
+	background-color:#CCCCCC;
+	color:#000000;
+}
+.listpane .row:hover {
+  opacity:0.4;
+  transition: opacity .2s ease-out;
+  -moz-transition: opacity .2s ease-out;
+  -webkit-transition: opacity .2s ease-out;
+  -o-transition: opacity .2s ease-out;
+  background:#65daf4;
+  color:#E6E6E6;
+}
+
+.listpane .action {
 	font-weight: 700;
 }
 
@@ -88,13 +107,14 @@ div.controlpane {
 
 
 .title {
-	font-size: 24px;
-	line-height: 28px;
+	font-size: 18px;
+	line-height: 22px;
 	margin-bottom: 10px;
 	font-weight: 700;
 }
 
 .controls {
+	width:60%;
 	margin-top: 20px;
 	margin-left: 20px;
 }
